fix overflow bug

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,5 +2,5 @@
 
 header {
     background-color: $secondary;
-    width: 100vw;
+    width: 100%;
 }
